--- a/index.html
+++ b/index.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <button id = "Create">Generate</button>
-        <button id = "hit1" onclick="myfunct">Hit1</button>
-        <button id = "hit2" onclick = "myfunct">Hit2</button>
-        <script src="game.js" async defer></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+</head>
+
+<body>
+    <button id="Create" class="btn btn-outline-info">Generate</button>
+    <div class="container-fluid" id="container">
+        <div class="row">
+            <div class="card" style="width:18rem" id="card1">
+                <div class="card-body" id="card-body">
+                    <h5 class="card-title" id="card-title1"></h5>
+                    <p class="card-text" id="card-text1"></p>
+                    <button id="hit1" onclick="myfunct" class="btn btn-primary">Hit1</button>
+                </div>
+            </div>
+
+            <div id = "timer">
+
+            </div>
+
+            <div class="card" style="width:18rem" id="card2">
+                <div class="card-body" id="card-body">
+                    <h5 class="card-title" id="card-title2"></h5>
+                    <p class="card-text" id="card-text2"></p>
+                    <button id="hit2" onclick="myfunct" class="btn btn-secondary">Hit2</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="game.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
